--- a/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
@@ -4,6 +4,7 @@ extension-helpers==1.0.0
 flit==3.8.0
 maturin==0.14.10
 pkgconfig==1.5.5
+py-cpuinfo==9.0.0
 scipy==1.9.3
 scitools-pyke==1.1.1
 setuptools-scm-git-archive==1.4
