--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -57,7 +57,7 @@ jsmin==3.0.1
 jsonpickle==2.2.0
 jsonschema==4.17.0
 kiwisolver==1.4.4
-llvmlite==0.40.0rc1
+llvmlite==0.40.0
 lmoments3==1.0.5
 locket==1.0.0
 lxml==4.9.1
@@ -73,7 +73,7 @@ multiurl==0.2.0
 munch==2.5.0
 nco==1.0.0
 netCDF4==1.6.2
-numba==0.57.0rc1
+numba==0.57.0
 numcodecs==0.10.2
 opencv-contrib-python-headless==4.6.0.66
 openturns==1.20.post3
