--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -80,8 +80,7 @@ bokeh<3.0.0
 astropy
 #note : icclim 6.3.0 requires exactly xclim==0.42.0
 icclim
-#protobuf>= 3.20 is not compatible with tensorflow <= 2.11.0
-protobuf<3.20.0
+protobuf
 #cf-units require antlr4-python3-runtime==4.7.2
 antlr4-python3-runtime==4.7.2
 xclim
