--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -43,6 +43,7 @@ folium==0.14.0
 fonttools==4.38.0
 fsspec==2022.11.0
 GDAL==3.5.3
+geographiclib==2.0
 geopandas==0.12.1
 geos==0.2.3
 graphviz==0.20.1
