--- a/layers/layer1_scientific/dcw_gmt/Makefile
+++ b/layers/layer1_scientific/dcw_gmt/Makefile
@@ -2,4 +2,4 @@ include Makefile.mk
 
 downloadonly:
 	$(MAKE) --file=$(MFEXT_HOME)/share/Makefile.standard download uncompress
-	cd build && mv $(NAME)-$(VERSION) $(NAME)
+	cd build && mv -f $(NAME)-$(VERSION) $(NAME)
