--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -4,6 +4,7 @@ antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
 astropy==5.1.1
 beautifulsoup4==4.11.1
+blinker==1.6.2
 bokeh==2.4.3
 boltons==21.0.0
 Bottleneck==1.3.5
