--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -91,3 +91,6 @@ pyogrio
 folium
 geographiclib
 -e git+https://github.com/metwork-framework/configobj#egg=configobj
+#tornado, distributed requirement, is also provided by layer python3_devtools
+#but we can't move it in layer python3 because circus (layer python3_circus)
+#requires tornado < 6
