--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -69,7 +69,7 @@ pyepsg
 statsmodels
 bokeh
 astropy
-#note : icclim 6.5.0 requires xclim>=0.45, <0.47
+#note : icclim 6.5.0 requires xclim>=0.45,<=0.47
 icclim
 protobuf
 #cf-units require antlr4-python3-runtime==4.7.2
