--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -20,6 +20,7 @@ click-plugins==1.1.1
 cligj==0.7.2
 climetlab==0.19.2
 cloudpickle==3.0.0
+coloredlogs==15.0.1
 -e git+https://github.com/metwork-framework/configobj@5.0.9#egg=configobj
 contourpy==1.1.1
 cramjam==2.7.0
@@ -41,6 +42,8 @@ ffmpy==0.3.1
 findlibs==0.0.5
 Fiona==1.9.5
 Flask==3.0.0
+flatten-dict==0.4.2
+FLORIS==3.5
 folium==0.14.0
 fonttools==4.43.1
 GDAL==3.8.3
@@ -49,6 +52,7 @@ geopandas==0.14.1
 geos==0.2.3
 graphviz==0.20.1
 greenlet==3.0.1
+humanfriendly==10.0
 h5py==3.10.0
 HeapDict==1.0.1
 icclim==6.5.0
@@ -80,6 +84,7 @@ nco==1.1.0
 netCDF4==1.6.4
 numba==0.58.1
 numcodecs==0.12.1
+numexpr==2.8.8
 numpngw==0.1.3
 odswriter==0.4.0
 opencv-contrib-python-headless==4.8.1.78
