--- a/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements3.txt
@@ -1,8 +1,1 @@
-beniget==0.4.1
-gast==0.5.4
-meson==1.2.2
-networkx==3.2.1
-numpy==1.26.3
-ply==3.11
-pybind11==2.11.1
-pythran==0.14.0
+meson-python==0.15.0
