--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,15 +89,15 @@ jobs:
             mkdir -p ${REMOTE}
           scp: |
             '${LOCAL}/*' => ${REMOTE}
-      - name: integration tests
-        if: ${{ steps.SetVariables.outputs.branch != 'null' && steps.BuildStep.outputs.bypass == 'false' }}
-        run: |
-          TESTIMAGE=${{ steps.SetVariables.outputs.testimage }}
-          DEP_BRANCH=${{ steps.SetVariables.outputs.dep_branch }}
-          BRANCH=${{ steps.SetVariables.outputs.branch }}
-          OS_VERSION=${{ steps.SetVariables.outputs.os }}
-          docker pull ${TESTIMAGE}
-          docker run ${DOCKER_RUN_OPTIONS} -e DEP_BRANCH=${DEP_BRANCH} -e BRANCH=${BRANCH} -e OS_VERSION=${OS_VERSION} --rm ${TESTIMAGE} /bin/bash -c "${DOCKER_WORKFLOW_SCRIPTS_DIR}/integration_tests.sh"
+#     - name: integration tests
+#       if: ${{ steps.SetVariables.outputs.branch != 'null' && steps.BuildStep.outputs.bypass == 'false' }}
+#       run: |
+#         TESTIMAGE=${{ steps.SetVariables.outputs.testimage }}
+#         DEP_BRANCH=${{ steps.SetVariables.outputs.dep_branch }}
+#         BRANCH=${{ steps.SetVariables.outputs.branch }}
+#         OS_VERSION=${{ steps.SetVariables.outputs.os }}
+#         docker pull ${TESTIMAGE}
+#         docker run ${DOCKER_RUN_OPTIONS} -e DEP_BRANCH=${DEP_BRANCH} -e BRANCH=${BRANCH} -e OS_VERSION=${OS_VERSION} --rm ${TESTIMAGE} /bin/bash -c "${DOCKER_WORKFLOW_SCRIPTS_DIR}/integration_tests.sh"
       - name: publish rpms
         if: ${{ github.event_name != 'pull_request' && steps.BuildStep.outputs.bypass == 'false' && steps.SetVariables.outputs.branch != 'null' }}
         uses: thebaptiste/ssh-scp-ssh-pipelines@metwork
