--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -3,6 +3,7 @@ aggdraw==1.3.18
 antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
 astropy==6.1.2
+astropy-iers-data==0.2024.8.26.0.31.57
 beautifulsoup4==4.12.2
 blinker==1.6.3
 bokeh==3.3.0
@@ -41,7 +42,7 @@ fasteners==0.19
 fastparquet==2023.10.1
 ffmpy==0.3.1
 findlibs==0.0.5
-Fiona==1.10b3
+Fiona==1.10.0rc1
 Flask==3.0.0
 flatten-dict==0.4.2
 FLORIS==3.5
