--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -1,6 +1,7 @@
 affine==2.4.0
 aggdraw==1.3.18
 antlr4-python3-runtime==4.7.2
+apng==0.3.4
 asciitree==0.3.3
 astropy==6.1.2
 astropy-iers-data==0.2024.8.26.0.31.57
