--- a/layers/layer4_python3_scientific/Makefile
+++ b/layers/layer4_python3_scientific/Makefile
@@ -1,2 +1,7 @@
 include ../../adm/root.mk
+
+$(shell mkdir -p $(MFEXT_HOME)/opt/python3_scientific/share/salem)
+$(shell cp salem-sample-data-57e6d694aa470b967336f5ca2d4fc743c5c8efd6.zip $(MFEXT_HOME)/opt/python3_scientific/share/salem)
+
 include $(MFEXT_HOME)/share/layer.mk
+
