--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -34,6 +34,7 @@ dateparser==1.1.8
 descartes==1.1.0
 distributed==2024.4.1
 donfig==0.8.1
+earthkit_meteo==0.1.1
 eccodes==1.6.1
 ecmwf-api-client==1.6.3
 ecmwf-opendata==0.2.0
@@ -143,6 +144,7 @@ SQLAlchemy==2.0.23
 statsmodels==0.14.2
 tblib==3.0.0
 tenacity==8.2.3
+thermofeel==2.0.0
 tifffile==2023.9.26
 toolz==0.12.0
 trollimage==1.21.0
