--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -45,6 +45,8 @@ findlibs==0.0.5
 Fiona==1.10.0rc1
 Flask==3.0.0
 flatten-dict==0.4.2
+flexcache==0.3
+flexparser==0.4
 FLORIS==3.5
 folium==0.14.0
 fonttools==4.43.1
@@ -92,7 +94,7 @@ pathos==0.3.1
 patsy==0.5.6
 pdbufr==0.11.0
 Pillow==11.0.0
-Pint==0.22
+Pint==0.24.4
 plotly==5.18.0
 pngquant==1.0.7
 polars==0.19.12
