--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -19,7 +19,7 @@ cf-xarray==0.8.6
 cfgrib==0.9.10.4
 click-plugins==1.1.1
 cligj==0.7.2
-climetlab==0.20.1
+-e git+https://github.com/thebaptiste/climetlab.git@0.24.1#egg=climetlab
 cloudpickle==3.0.0
 coloredlogs==15.0.1
 configobj==5.0.9
