--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -7,7 +7,7 @@ astropy-iers-data==0.2024.8.26.0.31.57
 blinker==1.6.3
 bokeh==3.3.0
 boltons==23.0.0
-Bottleneck==1.3.7
+Bottleneck==1.4.2
 branca==0.6.0
 cads_api_client==1.3.2
 Cartopy==0.24.1
@@ -19,11 +19,11 @@ cf-xarray==0.8.6
 cfgrib==0.9.10.4
 click-plugins==1.1.1
 cligj==0.7.2
-climetlab==0.20.1
+-e git+https://github.com/thebaptiste/climetlab.git@0.24.1#egg=climetlab
 cloudpickle==3.0.0
 coloredlogs==15.0.1
 configobj==5.0.9
-contourpy==1.1.1
+contourpy==1.2.1
 cramjam==2.7.0
 cycler==0.12.1
 dask==2024.4.1
@@ -57,7 +57,7 @@ greenlet==3.1.1
 humanfriendly==10.0
 h5py==3.11.0
 HeapDict==1.0.1
-icclim==6.5.0
+icclim==7.0.0
 imageio==2.31.5
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
@@ -65,14 +65,14 @@ jsmin==3.0.1
 jsonpickle==3.0.2
 kiwisolver==1.4.5
 lazy-loader==0.3
-llvmlite==0.42.0
+llvmlite==0.43.0
 lmoments3==1.0.6
 locket==1.0.0
 lru-dict==1.3.0
 lxml==5.3.0
 Magics==1.5.8
 mapclassify==2.6.1
-matplotlib==3.8.0
+matplotlib==3.9.2
 MetPy==1.5.1
 metview==1.16.1
 monotonic==1.6
@@ -82,13 +82,13 @@ multiurl==0.3.3
 munch==4.0.0
 nco==1.1.0
 netCDF4==1.6.4
-numba==0.59.1
+numba==0.60.0
 numcodecs==0.12.1
-numexpr==2.9.0
+numexpr==2.10.1
 numpngw==0.1.3
-opencv-contrib-python-headless==4.9.0.80
+opencv-contrib-python-headless==4.10.0.84
 openturns==1.22
--e git+https://gitlab.com/cerfacs/batman.git@1.9.2-develop-mf#egg=ot-batman
+-e git+https://gitlab.com/thebaptiste/batman.git@1.9.3-develop-mf#egg=ot-batman
 palettable==3.3.3
 partd==1.4.1
 pathos==0.3.1
@@ -108,7 +108,7 @@ pycoast==1.6.1
 pycurl==7.45.2
 pydecorate==0.4.0
 pyepsg==0.4.0
-pyerfa==2.0.1.1
+pyerfa==2.0.1.5
 pygmt==0.10.0
 pygraphviz==1.11
 pyhdf==0.11.3
@@ -129,11 +129,11 @@ rechunker==0.5.2
 regionmask==0.11.0
 reportlab==4.0.6
 rtree==1.1.0
-salem==0.3.9
+salem==0.3.11
 satpy==0.44.0
 scikit-image==0.22.0
 scikit-learn==1.5.0
-scitools-iris==3.10.0
+scitools-iris==3.11.0
 seaborn==0.13.0
 Shapely==2.0.2
 snuggs==1.4.7
@@ -148,9 +148,10 @@ toolz==0.12.0
 trollimage==1.21.0
 trollsift==0.5.1
 tzlocal==5.2
-xclim==0.47.0
+xclim==0.48.0
 xxhash==3.4.1
 xyzservices==2023.10.0
+windrose==1.9.0
+yamale==5.2.1
 zarr==2.16.1
 zict==3.0.0
-windrose==1.9.0
