--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -88,7 +88,7 @@ numcodecs==0.12.1
 numexpr==2.9.0
 numpngw==0.1.3
 opencv-contrib-python-headless==4.9.0.80
-openturns==1.24rc1
+openturns==1.24
 -e git+https://gitlab.com/cerfacs/batman.git@1.9.2-develop-mf#egg=ot-batman
 palettable==3.3.3
 partd==1.4.1
