--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -53,7 +53,6 @@ pdbufr
 pyodc
 ffmpy
 -e git+https://gitlab.com/cerfacs/batman.git#egg=ot-batman
-numba
 pyhdf
 pygmt
 pysteps
@@ -95,6 +94,6 @@ apng
 thermofeel
 #temporarly removed (lack of Python 3.13 support)
 llvmlite #temporarly use 0.44.0rc1
-#numba (requiring llvmlite)
+numba #temporarly use  0.61.0rc1
 #xclim (requiring numba)
 #icclim (requiring xclim)
