--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -1,5 +1,5 @@
-standard-imghdr==3.13.0
 llvmlite==0.44.0rc1
+numba==0.61.0rc1
 affine==2.4.0
 aggdraw==1.3.18
 apng==0.3.4
@@ -141,6 +141,7 @@ snuggs==1.4.7
 sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.36
+standard-imghdr==3.13.0
 statsmodels==0.14.2
 tblib==3.0.0
 tenacity==8.2.3
