--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -13,7 +13,7 @@ cads_api_client==1.3.2
 Cartopy==0.24.1
 cdo==1.6.0
 cdsapi==0.7.3
-cftime==1.6.2
+cftime==1.6.4.post1
 cf-units==3.3.0
 cf-xarray==0.8.6
 cfgrib==0.9.10.4
