--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -12,7 +12,7 @@ branca==0.6.0
 cads_api_client==1.3.2
 Cartopy==0.24.1
 cdo==1.6.0
-cdsapi==0.7.3
+cdsapi==0.7.5
 cftime==1.6.4.post1
 cf-units==3.3.0
 cf-xarray==0.8.6
@@ -28,6 +28,7 @@ cramjam==2.7.0
 cycler==0.12.1
 dask==2024.4.1
 dask-expr==1.0.11
+datapi==0.1.1
 dateparser==1.1.8
 descartes==1.1.0
 distributed==2024.4.1
