--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -70,7 +70,7 @@ statsmodels
 bokeh
 astropy
 #note : icclim 7.0.0 requires xclim>=0.45,<=0.48
-icclim
+#icclim (temporarly removed for Python 3.13 compatibility)
 protobuf
 xclim
 Pint
