--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -58,7 +58,6 @@ greenlet==3.1.1
 humanfriendly==10.0
 h5py==3.12.1
 HeapDict==1.0.1
-icclim==7.0.0
 imageio==2.36.1
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
@@ -66,7 +65,7 @@ jsmin==3.0.1
 jsonpickle==3.0.2
 kiwisolver==1.4.5
 lazy-loader==0.3
-llvmlite==0.43.0
+llvmlite==0.44.0rc2
 lmoments3==1.0.6
 locket==1.0.0
 lru-dict==1.3.0
@@ -83,7 +82,7 @@ multiurl==0.3.3
 munch==4.0.0
 nco==1.1.0
 netCDF4==1.6.4
-numba==0.60.0
+numba==0.61.0rc1
 numcodecs==0.12.1
 numexpr==2.10.1
 numpngw==0.1.3
@@ -149,7 +148,7 @@ toolz==0.12.0
 trollimage==1.21.0
 trollsift==0.5.1
 tzlocal==5.2
-xclim==0.48.0
+xclim==0.48.2
 xxhash==3.4.1
 xyzservices==2023.10.0
 windrose==1.9.0
