--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -71,11 +71,12 @@ locket==1.0.0
 lru-dict==1.3.0
 lxml==5.3.0
 Magics==1.5.8
-mapclassify==2.6.1
+mapclassify==2.8.1
 matplotlib==3.9.2
 MetPy==1.5.1
 metview==1.16.1
 monotonic==1.6
+mpi4py==4.0.1
 msgpack==1.1.0
 multiprocess==0.70.15
 multiurl==0.3.3
