--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /layers/layer*/*_extra_python_packages*/src
 /layers/layer*/*_extra_python_packages*/tempolayer*
 /layers/layer*/cache
+layers/layer1_scientific/0003_libimagequant/imagequant.pc
 
 
 doc/_build
