--- a/layers/layer5_python3_extratools/0500_extra_packages/requirements3.txt
+++ b/layers/layer5_python3_extratools/0500_extra_packages/requirements3.txt
@@ -1,13 +1,14 @@
-Aspose.Slides==24.11.0
 anyio==3.5.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.5.2
+Aspose.Slides==24.11.0
 async-lru==2.0.4
 bleach==6.1.0
 comm==0.2.2
 debugpy==1.8.7
 defusedxml==0.7.1
+docstring-to-markdown==0.15
 et-xmlfile==1.1.0
 faicons==0.2.2
 fastjsonschema==2.20.0
@@ -28,6 +29,7 @@ jupyter-core==5.7.2
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
 jupyter-server==2.14.2
+jupyter-server-proxy==4.4.0
 jupyter-server-terminals==0.5.3
 jupyterlab==4.2.5
 jupyterlab-pygments==0.3.0
@@ -35,6 +37,7 @@ jupyterlab-server==2.27.3
 linkify-it-py==2.0.3
 mdit-py-plugins==0.4.1
 mistune==3.0.2
+nbclassic==1.2.0
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
@@ -47,6 +50,8 @@ overrides==7.7.0
 pandocfilters==1.5.1
 prometheus-client==0.21.0
 python-json-logger==2.0.7
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.12.0
 python-multipart==0.0.19
 python-pptx==1.0.2
 pyzmq==25.1.1
@@ -55,11 +60,13 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 Send2Trash==1.8.3
 shiny==1.0.0
+simpervisor==1.0.0
 sniffio==1.2.0
 starlette==0.41.0
 terminado==0.18.1
 tinycss2==1.3.0
 uc-micro-py==1.0.3
+ujson==5.10.0
 uri-template==1.3.0
 uvicorn==0.17.5
 watchfiles==0.24.0
