--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -61,7 +61,7 @@ jsmin==3.0.1
 jsonpickle==3.4.2
 kiwisolver==1.4.5
 lazy-loader==0.4
-llvmlite==0.44.0rc2
+llvmlite==0.44.0
 lmoments3==1.0.8
 locket==1.0.0
 lru-dict==1.3.0
@@ -77,7 +77,7 @@ multiurl==0.3.3
 munch==4.0.0
 nco==1.1.2
 netCDF4==1.7.2
-numba==0.61.0rc2
+numba==0.61.0
 numcodecs==0.14.1
 numpngw==0.1.4
 opencv-contrib-python-headless==4.10.0.84
