--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -11,6 +11,8 @@ blinker==1.6.3
 bokeh==3.6.2
 boltons==23.0.0
 Bottleneck==1.4.2
+boto3==1.36.18
+botocore==1.36.18
 branca==0.6.0
 cads_api_client==1.3.2
 Cartopy==0.24.1
@@ -27,6 +29,7 @@ cloudpickle==3.0.0
 configobj==5.0.9
 conflator==0.1.5
 contourpy==1.3.1
+copernicusmarine==2.0.1
 covjson_pydantic==0.5.0
 covjsonkit==0.1.1
 cramjam==2.7.0
@@ -71,6 +74,7 @@ greenlet==3.1.1
 h5py==3.12.1
 hda==2.22
 HeapDict==1.0.1
+h5netcdf==1.5.0
 imageio==2.36.1
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
@@ -134,6 +138,7 @@ pyproj==3.6.1
 pyresample==1.27.1
 pyrsistent==0.20.0
 pyshp==2.3.1
+pystac==1.12.1
 pysteps==1.7.4
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.4.1
@@ -143,12 +148,14 @@ regionmask==0.11.0
 reportlab==4.0.6
 rich-argparse==1.6.0
 rtree==1.1.0
+s3transfer==0.11.2
 salem==0.3.11
 satpy==0.44.0
 scikit-image==0.25.0
 scikit-learn==1.5.0
 scitools-iris==3.11.0
 seaborn==0.13.0
+semver==3.0.4
 Shapely==2.0.6
 snuggs==1.4.7
 sortedcontainers==2.4.0
