--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -116,13 +116,14 @@ patsy==0.5.6
 pdbufr==0.11.0
 Pint==0.24.4
 plotly==5.18.0
-pngquant==3.0.2
+pngquant==3.0.3
 polars==0.19.12
 polytope-client==0.7.4
 pooch==1.8.0
 pox==0.3.3
 ppft==1.7.6.7
 protobuf==3.20.3
+puremagic==1.28
 pyarrow==18.0.0
 pycoast==1.6.1
 pycurl==7.45.2
