--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -41,18 +41,21 @@ DateTime==5.5
 distributed==2025.3.0
 docstring_parser==0.16
 donfig==0.8.1.post1
-earthkit-data==0.12.1
+earthkit-climate==0.1.1
+earthkit-data==0.13.8
 earthkit-geo==0.3.0
+earthkit-hydro==0.1.3
 earthkit-meteo==0.3.0
-earthkit-plots==0.2.8
-earthkit-plots-default-styles==0.0.1
+earthkit-plots==0.3.1
+earthkit-plots-default-styles==0.1.0
 earthkit-regrid==0.4.0
 earthkit-time==0.1.7
-earthkit-transforms==0.3.4.1
-earthkit==0.9.3
+earthkit-transforms==0.4.0
+earthkit==0.10.2
 eccodes==2.41.0
 ecmwf-api-client==1.6.3
 ecmwf-opendata==0.3.14
+ek-aggregate==0.1.2
 fasteners==0.19
 fastparquet==2024.11.0
 ffmpy==0.3.1
