--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -158,6 +158,7 @@ satpy==0.44.0
 scikit-image==0.25.0
 scikit-learn==1.5.0
 scitools-iris==3.11.0
+scores==2.1.0
 seaborn==0.13.0
 semver==3.0.4
 Shapely==2.0.6
