--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -2,6 +2,7 @@ adjustText==1.3.0
 affine==2.4.0
 aggdraw==1.3.19
 apng==0.3.4
+arcosparse==0.4.0
 argparse==1.4.0
 array_api_compat==1.11.2
 asciitree==0.3.3
@@ -29,7 +30,7 @@ coloredlogs==15.0.1
 configobj==5.0.9
 conflator==0.1.7
 contourpy==1.3.2
-copernicusmarine==2.0.1
+copernicusmarine==2.1.0
 covjson_pydantic==0.6.0
 covjsonkit==0.1.9
 cramjam==2.10.0
