feat: bump protobuf from 3.20.3 to 5.29.4 with binary build (there are difficulties to build from sources because of protobuf built from sources)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -69,7 +69,8 @@ bokeh
 astropy
 #note : icclim 7.0.0 requires xclim>=0.45,<=0.48
 #icclim (temporarly removed for Python 3.13 compatibility)
-protobuf
+#tensorflow 2.19.0 requires protbuf < 6
+protobuf<6
 xclim
 Pint
 pyoscar
